fix UI Menu adjustments : Improve layout consistency and rendering - Changed alignment from CENTER to TOP_CENTER to unify Player and Backup - Added padding to menu for better spacing

--- a/src/main/resources/fr/softsf/sudokufx/style/style.css
+++ b/src/main/resources/fr/softsf/sudokufx/style/style.css
@@ -236,6 +236,7 @@
 }
 
 .menu {
+    -fx-padding: 0.93em 0.65em 0.65em 0.65em;
     -fx-spacing: 0.79em;
     -fx-background-color: #00FF00;
     -fx-pref-height: 27.9em;
